# cw-course

counting-contract/: Cargo.toml
counting-contract-0.2/: .gitignore  Cargo.toml
counting-contract-0.2/.cargo/: config
counting-contract-0.2/src/: contract.rs  lib.rs  msg.rs  state.rs
counting-contract-0.2/src/multitest/: contract.rs  tests.rs
counting-contract/schema/: counting_contract.json
counting-contract/src/: contract.rs  lib.rs
counting-contract/src/multitest/: contract.rs  tests.rs
counting_contract/: Cargo.toml
counting_contract/src/: contract.rs  lib.rs  msg.rs  state.rs
counting_contract/src/multitest/: contract.rs  tests.rs
