[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "1.0.1"
serde = "1.0.160"

[dev-dependencies]
cw-multi-test = "0.16.3"
